Add Existing File

--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<head>
+    <link rel="stylesheet" type="text/css" href="dummyStyle.css">
+    <style></style>
+    <title>Stonewood Plumbing</title>
+</head>
 <body>
+
+<div id="base_wrapper">
+    <header id="header_wrap">
+        <div id="upper_head">
+
+        </div>
+        <div id="lower_head">
+
+        </div>
+    </header>
+    <div id="main_body">
+
+
+    </div>
+
+</div>
 <p>Do a thing</p>
 </body>
 </html>
