--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="dummyStyle.css">
-    <style></style>
+    <meta http-equiv="refresh" content="0; URL='SPF MAIN" />
     <title>Stonewood Plumbing</title>
 </head>
 <body>
