--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,7 @@
 	
 			<div class = "Logo">
 				<h1>
-					<a href = "SQRL Main.htm" style = "color:whitesmoke"><b>Stonefinger Plumbing</b></a>
+					<a href = "" style = "color:whitesmoke"><b>Stonefinger Plumbing</b></a>
 				</h1>
 
 			</div>
@@ -49,6 +49,7 @@
 	<div class = "mainPanel">
 		<div id="image_area">
 
+            <iframe src="http://debbie.fergus.com/portal/portal_job_request/view/1" style="border: none; width: 100%; height: 100%;"></iframe>
 
 		</div>
 
