Add exisiting file

--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%">
 <title>StoneFinger</title>
 <head>
 	<link rel="stylesheet" type="text/css" href="dummyStyle.css">
@@ -12,34 +12,36 @@
 </script>
 </head>
 
-<body>
-<div id = "wrapper">
-<!-- The Division for the Large Banner at the top -->
-	<div id="banner_wrapper">
-		<div class = "Banner">
-	
-			<div class = "estDate">
-				<span style = "color: #F0FFFF">Your choice since </span><span style="color: gold"><ins>2017</ins></span>
-			</div>
-	
-			<div class = "Logo">
-				<h1>
-					<a href = "" style = "color:whitesmoke"><b>Stonefinger Plumbing</b></a>
-				</h1>
+<body style="height: 100%">
+    <div class = "wrapper">
+    <!-- The Division for the Large Banner at the top -->
+	    <div id="banner_wrapper">
+		    <div class = "Banner">
+	            <!--
+ <div class = "estDate">
+                    <span style = "color: #F0FFFF">Your choice since </span><span style="color: gold"><ins>2017</ins></span>
+                </div>
+	            -->
+			    <div class = "Logo">
+                     <img class="banner_logo" src="images/Stolen%20logo%202-1.png">
+				    <h1>
+				    	<a class="logo_link" href = "" style = "color:whitesmoke"><b>Stonefinger Plumbing</b></a>
+				    </h1>
+			    </div>
 
-			</div>
 
 	
-		</div>
+		    </div>
 		<ul class="banner_menu" style = "list-style-type:none">
 			<li class="banner_menu_option">
-				<a href = ""><b>Home</b></a>
+				<a class="banner_menu_option" href = ""><b>Home</b></a>
 			</li>
+            <li class="banner_menu_option">
+                <a class="banner_menu_option" href = ""><b>Contact Us</b></a>
+            </li>
+
 			<li class="banner_menu_option">
-				<a href = ""><b>About Us</b></a>
-			</li>
-			<li class="banner_menu_option">
-				<a href = ""><b>Documentation</b></a>
+				<a class="banner_menu_option" href = ""><b>About Us</b> v </a>
 			</li>
 		</ul>
 
@@ -47,18 +49,23 @@
 
 <!-- The Division for the Main central panel in the middle -->
 	<div class = "mainPanel">
-		<div id="image_area">
 
-            <iframe src="http://debbie.fergus.com/portal/portal_job_request/view/1" style="border: none; width: 100%; height: 100%;"></iframe>
+		<div class="image_area">
+            <!--<img class="cheat" src="images/city%20panorama.jpg">-->
+            <div class="image_area_center">
+
+
+            </div>
+
 
 		</div>
 
+        <iframe src="http://debbie.fergus.com/portal/portal_job_request/view/1" style="border: none; width: 100%; height: 100%;"></iframe>
 
 
+    </div>
 
-		</div>
-
-	<div class = "footer"></div>
+	<!--<div class = "footer"></div>-->
 </body>
 </html>
 
