Add exisiting file

--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="height: 100%">
+<html style="height: 100%; width: 100%;">
 <title>StoneFinger</title>
 <head>
 	<link rel="stylesheet" type="text/css" href="dummyStyle.css">
@@ -12,10 +12,10 @@
 </script>
 </head>
 
-<body style="height: 100%">
+<body style="height: 100%; width: 100%;">
     <div class = "wrapper">
     <!-- The Division for the Large Banner at the top -->
-	    <div id="banner_wrapper">
+	    <div class="banner_wrapper">
 		    <div class = "Banner">
 	            <!--
  <div class = "estDate">
@@ -41,7 +41,7 @@
             </li>
 
 			<li class="banner_menu_option">
-				<a class="banner_menu_option" href = ""><b>About Us</b> v </a>
+				<a class="banner_menu_option" href = ""><b>About Us</b>  </a>
 			</li>
 		</ul>
 
