Add exisiting file

--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<html style="height: 100%; width: 100%;">
+<html style="
+   width: 100%;
+   height: 100%;
+   margin: 0px;
+   padding: 0px;
+   overflow-x: hidden;">
 <title>StoneFinger</title>
 <head>
 	<link rel="stylesheet" type="text/css" href="dummyStyle.css">
@@ -12,7 +17,15 @@
 </script>
 </head>
 
-<body style="height: 100%; width: 100%;">
+<body style="
+   width: 100%;
+   height: 100%;
+   margin: 0px;
+   padding: 0px;
+   overflow-x: hidden;">
+
+
+</body>
     <div class = "wrapper">
     <!-- The Division for the Large Banner at the top -->
 	    <div class="banner_wrapper">
@@ -51,16 +64,11 @@
 	<div class = "mainPanel">
 
 		<div class="image_area">
-            <!--<img class="cheat" src="images/city%20panorama.jpg">-->
-            <div class="image_area_center">
+            <img src="images/city panorama.jpg" style="width: 100%">
 
+        </div>
 
-            </div>
-
-
-		</div>
-
-        <iframe src="http://debbie.fergus.com/portal/portal_job_request/view/1" style="border: none; width: 100%; height: 100%;"></iframe>
+        <iframe src="http://debbie.fergus.com/portal/portal_job_request/view/1" style="border: none; width: 100%; height: 1500px;"></iframe>
 
 
     </div>
