--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,6 @@
    overflow-x: hidden;">
 
 
-</body>
     <div class = "wrapper">
     <!-- The Division for the Large Banner at the top -->
 	    <div class="banner_wrapper">
@@ -71,8 +70,8 @@
         <iframe src="http://debbie.fergus.com/portal/portal_job_request/view/1" style="border: none; width: 100%; height: 1500px;"></iframe>
 
 
+         </div>
     </div>
-
 	<!--<div class = "footer"></div>-->
 </body>
 </html>
